# weather_modelling

./: .gitignore  00_pipeline.sh  01_collect_data.sh  01_watch_directory.sh  02_extract_pressure.sh  02_watch_data_dir.sh  03_extract_pressure.sh  03_watch_extract_dir.sh  03_watch_to_edit.sh  04_extract_surface.sh  04_merge_timestamps.sh  04_watch_merge_grib.sh  04_zarr.py  05_convert_nc.sh  05_grib_zarr.py  05_merge.sh  05_merge_timestamps.sh  06_nc_zarr.py  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker_forecast.sh  docker_model.sh  download_merged.sh  entrypoint.sh  extract_boilerplate.sh  gdas_utility_fixed.py  gfs-prepare.sh  gfs-watch.sh  main.py  polling.sh  pyproject.toml  python-prepare.sh  resilient_curl.sh  run_docker.sh  run_model.sh  startup.sh  startup_forecast.sh  startup_model.sh  (+3 more)
images/: Dockerfile_downloader  Dockerfile_modeller
images/builders/: Dockerfile_graphcast  Dockerfile_wgrib
old_code/: 00_pipeline.sh  01_collect_data.sh  02_extract_pressure.sh  02_extract_surface.sh  02_watch_data_dir.sh  03_watch_extract_dir.sh  04_merge_timestamps.sh  04_zarr.py  05_grib_zarr.py  EFFICIENCY_REPORT.md  README_GRAPHCAST.md  flake.nix  gfs-prepare.sh  gfs-watch.sh  install_graphcast.sh  run_graphcast_forecast.py
