[project]
name = "weather-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cfgrib>=0.9.15.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "xarray>=2025.7.1",
    "zarr>=3.1.0",
    "jax>=0.4.0",
    "dm-haiku>=0.0.9",
    "google-cloud-storage>=2.0.0",
]
